# Sistema_RDF_MUSIC

./: README.md
apps/: run_RDF_MUSIC_N210.grc  run_RDF_MUSIC_calib_N210.grc  sync_RDF_N210.grc
gr-syncro/: CMakeLists.txt  MANIFEST.md  README.md
gr-syncro/docs/: README.syncro
gr-syncro/grc/: CMakeLists.txt  syncro_phase_offset.xml
gr-syncro/lib/: CMakeLists.txt  phase_offset_impl.cc  phase_offset_impl.h  qa_syncro.cc  qa_syncro.h  test_syncro.cc
gr-syncro/python/: CMakeLists.txt  __init__.py
gr-syncro/swig/: CMakeLists.txt  syncro_swig.i
gr_rdf_music/: readme.md
gr_rdf_music/apps/: calibrate_RDF_N210.grc
gr_rdf_music/docs/: README.doa
gr_rdf_music/grc/: doa_MUSIC_lin_array.xml  doa_antenna_correction.xml  doa_calibrate_lin_array.xml
gr_rdf_music/include/doa/: CMakeLists.txt  MUSIC_lin_array.h  antenna_correction.h  api.h  autocorrelate.h  calibrate_lin_array.h  find_local_max.h  rootMUSIC_linear_array.h
gr_rdf_music/lib/: MUSIC_lin_array_impl.cc  MUSIC_lin_array_impl.h  antenna_correction_impl.cc  antenna_correction_impl.h  autocorrelate_impl.cc  autocorrelate_impl.h  calibrate_lin_array_impl.cc  calibrate_lin_array_impl.h  find_local_max_impl.cc  find_local_max_impl.h  rootMUSIC_linear_array_impl.cc  rootMUSIC_linear_array_impl.h
gr_rdf_music/python/: average_and_save.py  compass.py  findmax_and_save.py  phase_correct_hier.py  qa_MUSIC_lin_array.py  qa_autocorrelate.py  qa_calibrate_lin_array.py  qa_find_local_max.py  qa_rootMUSIC_linear_array.py  save_antenna_calib.py  twinrx_phase_offset_est.py  twinrx_usrp_source.py
(+7 files in other folders)
